[package]
name = "tda_api_wrapper"
version = "0.1.0"
authors = ["oisin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = {version = "*", features = ["full"]}
serde_json = "*"
state = { version = "*", features = ["tls"] }
lazy_static ="*"