[package]
name = "tda_api_wrapper"
version = "0.1.0"
authors = ["oisin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="*", features = ["json"]}
tokio = {version = "*", features = ["full"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
state = { version = "*", features = ["tls"] }
lazy_static ="*"
rusty-machine = "0.5.4"